--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,6 @@
     --color-green-2 : greenyellow;
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
