Adiciona item a sidevar 202-01-11

--- a/src/app/components/pages/container-app/container-app.component.html
+++ b/src/app/components/pages/container-app/container-app.component.html
@@ -21,7 +21,85 @@
             <a mat-list-item>
                 <span class="entry">
                     <mat-icon>house</mat-icon>
-                    <span *ngIf="!isCollapsed">Dashboard</span>
+                    <span *ngIf="!isCollapsed">Inicio</span>
+                </span>
+            </a>
+            <a mat-list-item>
+                <span class="entry">
+                    <mat-icon>house</mat-icon>
+                    <span *ngIf="!isCollapsed"> Control Recepcion </span>
+                </span>
+            </a>
+            <a mat-list-item>
+                <span class="entry">
+                    <mat-icon>subject</mat-icon>
+                    <span *ngIf="!isCollapsed"> Recepcion </span>
+                </span>
+            </a>
+            <a mat-list-item>
+                <span class="entry">
+                    <mat-icon>settings_backup_restore</mat-icon>
+                    <span *ngIf="!isCollapsed"> Devolucion </span>
+                </span>
+            </a>
+            <a mat-list-item>
+                <span class="entry">
+                    <mat-icon>house</mat-icon>
+                    <span *ngIf="!isCollapsed"> Reportes </span>
+                </span>
+            </a>
+            <a mat-list-item>
+                <span class="entry">
+                    <mat-icon>subject</mat-icon>
+                    <span *ngIf="!isCollapsed"> Reportes Recepcion </span>
+                </span>
+            </a>
+            <a mat-list-item>
+                <span class="entry">
+                    <mat-icon>settings_backup_restore</mat-icon>
+                    <span *ngIf="!isCollapsed">Reportes Devolucion</span>
+                </span>
+            </a>
+            <a mat-list-item>
+                <span class="entry">
+                    <mat-icon>settings</mat-icon>
+                    <span *ngIf="!isCollapsed"> Configuracion </span>
+                </span>
+            </a>
+            <a mat-list-item>
+                <span class="entry">
+                    <mat-icon>business</mat-icon>
+                    <span *ngIf="!isCollapsed"> Fondo </span>
+                </span>
+            </a>
+            <a mat-list-item>
+                <span class="entry">
+                    <mat-icon>location_on</mat-icon>
+                    <span *ngIf="!isCollapsed">Regional</span>
+                </span>
+            </a>
+            <a mat-list-item>
+                <span class="entry">
+                    <mat-icon>devices</mat-icon>
+                    <span *ngIf="!isCollapsed"> Oficina </span>
+                </span>
+            </a>
+            <a mat-list-item>
+                <span class="entry">
+                    <mat-icon>house</mat-icon>
+                    <span *ngIf="!isCollapsed"> Proceso </span>
+                </span>
+            </a>
+            <a mat-list-item>
+                <span class="entry">
+                    <mat-icon>account_circle</mat-icon>
+                    <span *ngIf="!isCollapsed"> Usuario </span>
+                </span>
+            </a>
+            <a mat-list-item>
+                <span class="entry">
+                    <mat-icon>house</mat-icon>
+                    <span *ngIf="!isCollapsed"> Devolucion </span>
                 </span>
             </a>
         </mat-nav-list>
@@ -35,7 +113,11 @@
             </button>
             <h1>Responsive</h1>
         </mat-toolbar>
-        <h2>content</h2>
+        <h2>Lista Icono</h2>
+        <p>
+            link
+            https://www.angularjswiki.com/angular/angular-material-icons-list-mat-icon-list/
+        </p>
         <router-outlet></router-outlet>
     </mat-sidenav-content>
 
