--- a/src/app/components/pages/container-app/container-app.component.html
+++ b/src/app/components/pages/container-app/container-app.component.html
@@ -13,11 +13,14 @@
 
 <mat-sidenav-container autosize>
     
-
+    
     <!-- <mat-sidenav [opened]="true" mode="side"> -->
     <!-- <mat-sidenav [mode]="isMobile ? 'over' : 'side'" [opened]="isMobile ? 'false' : 'true'"> -->
     <mat-sidenav [ngClass]="!isCollapsed ? 'expanded' : ''"  [mode]="isMobile ? 'over' : 'side'" [opened]="isMobile ? 'false' : 'true'">
+        <img src="../../../../assets/img/coomeva.png" alt="">
+        <mat-divider></mat-divider>
         <mat-nav-list>
+
             <!-- <a mat-list-item>
                 <span class="entry">
                     <mat-icon>house</mat-icon>
