se agraga componente company

--- a/src/app/components/pages/container-app/container-app.component.html
+++ b/src/app/components/pages/container-app/container-app.component.html
@@ -112,7 +112,7 @@
                         <!-- </a> -->
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-            <a mat-list-item>
+            <a mat-list-item routerLink="/company" routerLinkActive="active">
                 <span class="entry">
                     <mat-icon>business</mat-icon>
                     <span *ngIf="!isCollapsed"> Fondo </span>
